[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
anyhow = "1.0.68"
base64 = "0.20.0"
iron = "0.6.1"
lazy_static = "1.4.0"
params = "0.8.0"
rand = "0.8.5"
reqwest = "0.11.14"
tokio = { version = "1.24.2", features = ["rt", "macros"] }
tokio-test = "0.4.2"
