[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
anyhow = "1.0.68"
asn1 = "0.13.0"
base64 = "0.20.0"
cbc = { version = "0.1.2", features = ["block-padding", "alloc", "std"]}
flate2 = "1.0.25"
hmac = "0.12.1"
iron = "0.6.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
num = "0.4.0"
num-bigint = { version = "0.4.3", features = ["std", "rand"]}
num-modular = { version = "0.5.1", features = ["num-bigint", "std"]}
num-prime = "0.4.3"
openssl = "0.10.45"
params = "0.8.0"
rand = "0.8.5"
reqwest = "0.11.14"
sha2 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["rt", "macros"] }
tokio-test = "0.4.2"
